Fixed profile photo not appearing on iOS

--- a/styles/AboutMe.module.css
+++ b/styles/AboutMe.module.css
@@ -23,8 +23,8 @@
 .photoSize {
   aspect-ratio: 1 / 1;
   position: relative;
-  min-height: auto;
-  min-width: 100%;
+  height: 14rem;
+  width: 14rem;
 }
 
 .photoSize img {
@@ -36,20 +36,36 @@
   margin-bottom: 1rem;
 }
 
+@media (max-width: 1200px) {
+  .photoSize {
+    height: 12rem;
+    width: 12rem;
+  }
+}
+
+@media (max-width: 1100px) {
+  .photoSize {
+    height: 10rem;
+    width: 10rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .photoSize {
+    height: 8rem;
+    width: 8rem;
+  }
+}
+
 @media (max-width: 800px) {
   .aboutGridLayout {
-    display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
     grid-template-rows: 0.5fr 1fr;
-    grid-gap: 2rem;
-    height: 100%;
-    width: 100%;
   }
 
   .aboutGridLayout .aboutTile:first-child {
     grid-column: span 1 / span 1;
     grid-row: span 1 / span 1;
-    min-height: 50%;
   }
 
   .aboutGridLayout .aboutTile:nth-child(2) {
@@ -58,24 +74,26 @@
   }
 
   .photoSize {
-    aspect-ratio: 1 / 1;
-    position: relative;
-    min-height: 100%;
-    min-width: auto;
-    max-height: 100vmin;
-    max-width: auto;
-    /* width: 4rem;
-    height: 4rem; */
+    height: 14rem;
+    width: 14rem;
   }
 }
 
-@media (max-width: 350px) {
+@media (max-width: 480px) {
+  .photoSize {
+    height: 14rem;
+    width: 14rem;
+  }
+}
+
+@media (max-width: 320px) {
   .aboutGridLayout {
-    display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
     grid-template-rows: 0.25fr 1fr;
-    grid-gap: 2rem;
-    height: 100%;
-    width: 100%;
+  }
+
+  .photoSize {
+    height: 10rem;
+    width: 10rem;
   }
 }
